--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!--
     JBoss, Home of Professional Open Source
     Copyright 2015, Red Hat, Inc. and/or its affiliates, and individual
@@ -15,140 +15,297 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>org.jboss.eap.quickstarts</groupId>
-        <artifactId>quickstart-parent</artifactId>
-        <version>7.1.0.Alpha</version>
-        <relativePath>../pom.xml</relativePath>
+        <groupId>org.jboss</groupId>
+        <artifactId>jboss-parent</artifactId>
+        <version>19</version>
+        <relativePath/>
     </parent>
-    <artifactId>kitchensink</artifactId>
-    <packaging>war</packaging>
-    <name>${qs.name.prefix} kitchensink</name>
-    <description>A starter Java EE web application project for use in JBoss EAP, generated from the jboss-javaee6-webapp archetype</description>
+    <groupId>org.jboss.quickstarts.eap</groupId>
+    <artifactId>jboss-quickstart-parent</artifactId>
+    <version>7.0.0.GA</version>
+    <packaging>pom</packaging>
+    <name>JBoss EAP Quickstart: Parent</name>
+    <description>JBoss EAP Quickstarts Parent</description>
+    <url>http://www.jboss.org/jdf/quickstarts/get-started/</url>
 
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
             <distribution>repo</distribution>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
         </license>
     </licenses>
 
-    <dependencies>
+    <!-- Activate JBoss Product Maven repository.
 
-        <!-- First declare the APIs we depend on and need for compilation. All
-            of them are provided by JBoss EAP -->
+        NOTE: Configuring the Maven repository in the pom.xml file is not a recommended procedure
+        and is only done here to make it easier to use the quickstarts.
 
-        <!-- Import the CDI API, we use provided scope as the API is included in
-            JBoss EAP -->
-        <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
+        For more information about how to configure Maven for your application,
+        see the section entitled 'Use the Maven Repository'
+        in the Development Guide for Red Hat JBoss Enterprise Application Platform located here:
 
-        <!-- Needed for running tests (you may also use TestNG) -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
+        https://access.redhat.com/documentation/en/jboss-enterprise-application-platform/
+    -->
+    <repositories>
+        <repository>
+            <id>jboss-enterprise-maven-repository</id>
+            <url>https://maven.repository.redhat.com/ga/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
-        <!-- Now we declare any tools needed -->
+    <pluginRepositories>
+        <pluginRepository>
+            <id>jboss-enterprise-maven-repository</id>
+            <url>https://maven.repository.redhat.com/ga/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
-        <!-- Annotation processor to generate the JPA metamodel classes for
-            typesafe criteria queries -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-jpamodelgen</artifactId>
-            <scope>provided</scope>
-        </dependency>
+    <properties>
+        <!-- A base list of dependency and plug-in version used in the various quick starts. -->
+        <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
 
-        <!-- Bean Validation Implementation 
-             Provides portable constraints such as @Email 
-             Hibernate Validator is shipped in JBoss EAP -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <!-- Annotation processor that raising compilation errors whenever constraint
-            annotations are incorrectly used. -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator-annotation-processor</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- Import the JPA API, we use provided scope as the API is included in
-            JBoss EAP -->
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- Optional, but highly recommended -->
-        <!-- Arquillian allows you to test enterprise code such as EJBs and Transactional(JTA)
-            JPA from JUnit/TestNG -->
-        <dependency>
-            <groupId>org.jboss.arquillian.junit</groupId>
-            <artifactId>arquillian-junit-container</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss.arquillian.protocol</groupId>
-            <artifactId>arquillian-protocol-servlet</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Import the Common Annotations API (JSR-250), we use provided scope
-            as the API is included in JBoss EAP -->
-        <dependency>
-            <groupId>org.jboss.spec.javax.annotation</groupId>
-            <artifactId>jboss-annotations-api_1.2_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- Import the EJB API, we use provided scope as the API is included in
-            JBoss EAP -->
-        <dependency>
-            <groupId>org.jboss.spec.javax.ejb</groupId>
-            <artifactId>jboss-ejb-api_3.2_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- Import the JSF API, we use provided scope as the API is included in
-            JBoss EAP -->
-        <dependency>
-            <groupId>org.jboss.spec.javax.faces</groupId>
-            <artifactId>jboss-jsf-api_2.2_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- Import the JAX-RS API, we use provided scope as the API is included
-            in JBoss EAP -->
-        <dependency>
-            <groupId>org.jboss.spec.javax.ws.rs</groupId>
-            <artifactId>jboss-jaxrs-api_2.0_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-    </dependencies>
+        <!-- other plug-in versions -->
+        <version.com.mycyla.license>2.5</version.com.mycyla.license>
+    </properties>
 
     <build>
-        <!-- Set the name of the WAR, used as the context root when the app is deployed -->
-        <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <!-- The WildFly plug-in deploys your apps to a local JBoss EAP container -->
+            <!-- Disabling it here means that we don't try to deploy this POM! -->
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>${version.wildfly.maven.plugin}</version>
+                <inherited>true</inherited>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>${version.com.mycyla.license}</version>
+                <configuration>
+                    <header>${basedir}/dist/license.txt</header>
+                    <aggregate>true</aggregate>
+                    <strictCheck>true</strictCheck>
+                    <excludes>
+                        <exclude>target/**</exclude>
+                        <exclude>.clover/**</exclude>
+                        <exclude>**/*.sql</exclude>
+                        <exclude>**/LICENSE*</exclude>
+                        <exclude>**/license*</exclude>
+                        <!-- Exclude specific Quickstarts -->
+                        <exclude>petclinic-spring/**</exclude>
+                        <!-- Javascrip Libraries -->
+                        <exclude>**/jquery*</exclude>
+                        <exclude>**/angular*</exclude>
+                        <exclude>**/qunit*</exclude>
+                        <exclude>**/backbone*</exclude>
+                        <exclude>**/lodash*</exclude>
+                        <exclude>**/modernizr*</exclude>
+                        <exclude>**/yepnope*</exclude>
+                        <exclude>**/mobile-nav*</exclude>
+                        <!--Other libraries -->
+                        <exclude>**/*glyphicons*/**</exclude>
+                        <exclude>**/*cordova*/**</exclude>
+                    </excludes>
+                    <encoding>UTF-8</encoding>
+                    <headerDefinitions>
+                        <headerDefinition>dist/headerdefinition.xml</headerDefinition>
+                    </headerDefinitions>
+                </configuration>
+              </plugin>
+        </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <!-- All the modules that require nothing but JBoss Enterprise
+                    Application Platform or JBoss EAP -->
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>default</name>
+                    <value>!disabled</value>
+                </property>
+            </activation>
+            <modules>
+                <!-- All the modules that require nothing but JBoss Enterprise
+                    Application Platform or JBoss EAP -->
+                <module>app-client</module>
+                <module>batch-processing</module>
+                <module>bean-validation</module>
+                <module>bean-validation-custom-constraint</module>
+                <module>bmt</module>
+                <module>cdi-alternative</module>
+                <module>cdi-decorator</module>
+                <module>cdi-interceptors</module>
+                <module>cdi-injection</module>
+                <module>cdi-portable-extension</module>
+                <module>cdi-stereotype</module>
+                <module>cdi-veto</module>
+                <module>cmt</module>
+                <module>contacts-jquerymobile</module>
+                <module>ejb-asynchronous</module>
+                <module>ejb-in-ear</module>
+                <module>ejb-in-war</module>
+                <module>ejb-security</module>
+                <module>ejb-security-interceptors</module>
+                <module>ejb-throws-exception</module>
+                <module>ejb-timer</module>
+                <module>ejb-multi-server</module>
+                <module>greeter</module>
+                <module>helloworld</module>
+                <module>helloworld-html5</module>
+                <module>helloworld-jms</module>
+                <module>helloworld-mbean</module>
+                <module>helloworld-mdb</module>
+                <module>helloworld-mdb-propertysubstitution</module>
+                <module>helloworld-rs</module>
+                <module>helloworld-singleton</module>
+                <module>helloworld-ws</module>
+                <module>hibernate5</module>
+                <module>inter-app</module>
+                <module>jaxws-addressing</module>
+                <module>jaxws-ejb</module>
+                <module>jaxws-pojo</module>
+                <module>jaxws-retail</module>
+                <module>kitchensink</module>
+                <module>kitchensink-angularjs</module>
+                <module>kitchensink-ear</module>
+                <module>kitchensink-html5-mobile</module>
+                <module>kitchensink-jsp</module>
+                <module>kitchensink-ml</module>
+                <module>kitchensink-ml-ear</module>
+                <module>log4j</module>
+                <module>logging</module>
+                <module>logging-tools</module>
+                <module>mail</module>
+                <module>managed-executor-service</module>
+                <module>numberguess</module>
+                <module>payment-cdi-event</module>
+                <module>picketlink-sts</module>
+                <module>servlet-async</module>
+                <module>servlet-filterlistener</module>
+                <module>servlet-security</module>
+                <module>shopping-cart</module>
+                <module>shrinkwrap-resolver</module>
+                <module>spring-resteasy</module>
+                <module>spring-petclinic</module>
+                <module>spring-kitchensink-springmvctest</module>
+                <module>spring-kitchensink-matrixvariables</module>
+                <module>spring-kitchensink-controlleradvice</module>
+                <module>spring-kitchensink-basic</module>
+                <module>spring-kitchensink-asyncrequestmapping</module>
+                <module>spring-greeter</module>
+                <module>tasks</module>
+                <module>tasks-jsf</module>
+                <module>tasks-rs</module>
+                <module>temperature-converter</module>
+                <module>thread-racing</module>
+                <module>websocket-client</module>
+                <module>websocket-endpoint</module>
+                <module>websocket-hello</module>
+                <module>xml-dom4j</module>
+                <module>xml-jaxp</module>
+            </modules>
+        </profile>
+        <profile>
+            <!-- All the quickstarts that require Postgres to be running -->
+            <id>requires-postgres</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>requires-postgres</name>
+                    <value>!disabled</value>
+                </property>
+            </activation>
+            <modules>
+                <module>jts</module>
+            </modules>
+        </profile>
+        <profile>
+            <!-- All the quickstarts that have weird requirements around deployment that Maven can't handle -->
+            <id>complex-dependencies</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>complex-dependencies</name>
+                    <value>!disabled</value>
+                </property>
+            </activation>
+            <modules>
+                <module>cluster-ha-singleton</module>
+                <module>ejb-remote</module>
+                <module>resteasy-jaxrs-client</module>
+                <module>jts</module>
+            </modules>
+        </profile>
+        <profile>
+            <!-- All the quickstarts that require the "standalone-full" profile
+                to be in use -->
+            <id>requires-full</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>requires-full</name>
+                    <value>!disabled</value>
+                </property>
+            </activation>
+            <modules>
+                <module>helloworld-mbean</module>
+                <module>helloworld-mdb</module>
+                <module>helloworld-mdb-propertysubstitution</module>
+                <module>jta-crash-rec</module>
+            </modules>
+        </profile>
+        <profile>
+            <!-- All the quickstarts that require the xts to be enabled -->
+            <id>requires-xts</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>requires-xts</name>
+                    <value>!disabled</value>
+                </property>
+            </activation>
+            <modules>
+                <module>wsat-simple</module>
+                <module>wsba-coordinator-completion-simple</module>
+                <module>wsba-participant-completion-simple</module>
+            </modules>
+        </profile>
+        <profile>
+            <!-- All the quickstarts that don't actually use Maven. Don't
+                activate this profile! We just include this for completeness. -->
+            <id>non-maven</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <modules>
+                <module>forge-from-scratch</module>
+                <module>h2-console</module>
+                <module>jts-distributed-crash-rec</module>
+            </modules>
+        </profile>
+    </profiles>
 </project>
